_sass/layout/type-md.scss
// TYPE MD
//------------------------------------------------
//------------------------------------------------

.full-width,
.books,
.content-primary,
.content-primary-blog,
.table-of-content,
.training-events {
    h2,
    h3 {
        font-weight: $font-regular;
        margin-top: 28px;
    }

    h2,
    h3,
    h4,
    h5 {
        color: $headings-font-color;
        font-weight: $font-regular;

        a {
            color: $headings-font-color;

            &:active,
            &:focus,
            &:hover {
                color: $brand-primary;
                text-decoration: none;
            }
        }
    }

    h2 {
        font-size: 1.75rem;
    }

    h3 {
        font-size: 1.25rem;
    }

    h4,
    h5 {
        font-size: 1.0rem;
        font-family: $base-font-family;
        font-weight: $font-bold;
    }
}

.content-primary,
.content-primary-blog {
  h2 {
    color: $brand-primary;
    a {
      color: $brand-primary;
    }
  }
}

.content-nav,
.content-nav-blog {
    h5 {
        font-size: 1.25rem;
        margin-bottom: 12px;
        color: $headings-font-color;
        font-weight: $font-regular;
    }
}

.content-primary,
.text-step {
    h2 {
        margin-bottom: 24px;
    }
    h3 {
        margin-bottom: 0.5rem;
    }

    blockquote,
    img,
    p,
    pre,
    table,
    ul {
        margin-bottom: 18px;
    }

    p + .code-snippet-area {
        // remove the margin-top for code snippet following a paragraph
        margin-top: 0px;
    }

    h4, h5 {
        margin-bottom: 0.5rem;
    }

    ol,
    ul {
        padding-left: 18px;
    }

    ol {
        li {
            list-style: decimal;
        }
    }

    ul {
        li {
            list-style: disc;
        }
    }

    ol,
    ul {
        li {
            padding-left: 10px;
            margin-bottom: 16px;

            ul {
                margin-top: 18px;

                li {
                    margin-bottom: 8px;
                    list-style: circle;
                    padding-left: 0;
                }
            }

            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    em {
        font-style: italic;
    }

    strong {
        font-weight: $font-bold;
    }

    del {
        text-decoration: line-through;
    }

    li,
    p,
    tr,
    td,
    dt,
    dd,
    pre {
        // common code for all code (inline and blocks)
        code {
            border: $base-border-gray;
        }
    }

    li,
    p,
    tr,
    td,
    dt,
    dd {
        code {
            font-family: 'Consolas';
            background-color: #fff;
            color: #859900;
            @include border-radius($border-radius-medium);
            padding: 2px 6px;
        }
    }

    pre {
        code {
            overflow-x: auto;
            display: block;
            font-size: $font-size-medium;
            @include border-radius($border-radius-base);
            padding: 10px 7px;
        }
    }

    table {
        width: 100%;
        text-align: left;

        thead {
            font-weight: $font-bold;
        }

        td,
        th {
            border-bottom: $base-border-gray;
            padding: 6px 0;
        }
    }

    img {
        width: 100%;
        height: auto;
    }

    blockquote {
        padding: 20px;
        border: 2px dashed $base-border-color-gray;
        font-size: $font-size-large;
        font-style: italic;
        @include border-radius($border-radius-base);

        &.help-info {
            border: 2px dashed $brand-tertiary-dotty;
            color: $brand-tertiary-dotty;
        }

        p {
            margin: 0;
        }
    }
    .tag-list {
      padding: 0;
      .tag-item {
        &:last-child {
          margin-bottom: 8px;
        }
      }
    }

    .filter-tag {
      margin-top: 30px;
      margin-bottom: 24px;
      text-transform: uppercase;
      font-style: italic;
      color: $base-font-color-light;
    }
}

